fixed white space in footer

--- a/src/styles/Componets.scss
+++ b/src/styles/Componets.scss
@@ -660,6 +660,7 @@ $eventLeftWidth: 350px;
 
   &-content {
     margin-top: 100px;
+    min-height: 80vh;
   }
 }
 
